<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/pref_category_appearance">

        <ListPreference
            app:key="theme_preference"
            app:title="@string/pref_title_theme"
            app:summary="%s"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:defaultValue="default"
            app:layout="@layout/custom_preference_summary_white" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_category_general">

        <SwitchPreferenceCompat
            app:key="notification_preference"
            app:title="@string/pref_title_notification"
            app:summaryOn="@string/pref_summary_notification_on"
            app:summaryOff="@string/pref_summary_notification_off"
            app:defaultValue="true"
            app:layout="@layout/custom_preference_summary_white"/>

        <Preference
            app:key="privacy_policy_preference"
            app:title="@string/pref_title_privacy_policy"
            app:summary="@string/pref_summary_privacy_policy"
            app:layout="@layout/custom_preference_summary_white"/>

        <Preference
            app:key="version_preference"
            app:title="@string/pref_title_version"
            app:summary="@string/version_format"
            app:layout="@layout/custom_preference_summary_white"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="account_category"
        app:title="アカウント">

        <Preference
            app:key="logout_preference"
            app:title="ログアウト"
            app:summary="現在のアカウントからログアウトします"
            app:iconSpaceReserved="false"
            app:layout="@layout/custom_preference_summary_white"/>

    </PreferenceCategory>

</PreferenceScreen> 