<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.contentful_javasilver.HomeFragment"
        android:label="Java Silver"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="randomQuizId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_homeFragment_to_chapterFragment"
            app:destination="@id/chapterFragment" />
        <action
            android:id="@+id/action_homeFragment_to_quizFragment"
            app:destination="@id/quizFragment" />
        <action
            android:id="@+id/action_homeFragment_to_problemListFragment"
            app:destination="@id/problemListFragment" />
        <action
            android:id="@+id/action_homeFragment_to_navigation_history"
            app:destination="@id/navigation_history" />
        <action
            android:id="@+id/action_homeFragment_to_navigation_bookmark"
            app:destination="@id/navigation_bookmark" />
    </fragment>

    <fragment
        android:id="@+id/chapterFragment"
        android:name="com.example.contentful_javasilver.ChapterFragment"
        android:label="チャプター選択"
        tools:layout="@layout/fragment_chapter">
        <action
            android:id="@+id/action_chapterFragment_to_categoryFragment"
            app:destination="@id/categoryFragment" />
    </fragment>

    <fragment
        android:id="@+id/categoryFragment"
        android:name="com.example.contentful_javasilver.CategoryFragment"
        android:label="カテゴリー選択"
        tools:layout="@layout/fragment_category">
        <action
            android:id="@+id/action_categoryFragment_to_questionCategoryFragment"
            app:destination="@id/questionCategoryFragment" />
        <argument
            android:name="chapterNumber"
            app:argType="integer" />
        <argument
            android:name="chapterTitle"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/questionCategoryFragment"
        android:name="com.example.contentful_javasilver.QuestionCategoryFragment"
        android:label="問題カテゴリー選択"
        tools:layout="@layout/fragment_question_category">
        <action
            android:id="@+id/action_questionCategoryFragment_to_quizFragment"
            app:destination="@id/quizFragment" />
        <argument
            android:name="category"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/quizFragment"
        android:name="com.example.contentful_javasilver.QuizFragment"
        android:label="クイズ"
        tools:layout="@layout/fragment_quiz">
        <argument
            android:name="qid"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <argument
            android:name="isRandomMode"
            app:argType="boolean"
            android:defaultValue="false" />
        <action
            android:id="@+id/action_quizFragment_to_problemListFragment"
            app:destination="@id/problemListFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.contentful_javasilver.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settingsFragment_to_privacyPolicyFragment"
            app:destination="@id/privacyPolicyFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/loadingFragment"
        android:name="com.example.contentful_javasilver.LoadingFragment"
        android:label="ローディング"
        tools:layout="@layout/fragment_loading">
        <action
            android:id="@+id/action_loading_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loadingFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/startFragment"
        android:name="com.example.contentful_javasilver.StartFragment"
        android:label="Start"
        tools:layout="@layout/fragment_start">
        <action
            android:id="@+id/action_start_to_loading"
            app:destination="@id/loadingFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_start_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_start_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.contentful_javasilver.LoginFragment"
        android:label="Login">
        <action
            android:id="@+id/action_loginFragment_to_loadingFragment"
            app:destination="@id/loadingFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.contentful_javasilver.RegisterFragment"
        android:label="Register">
        <action
            android:id="@+id/action_registerFragment_to_loadingFragment"
            app:destination="@id/loadingFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/problemListFragment"
        android:name="com.example.contentful_javasilver.ProblemListFragment"
        android:label="問題一覧"
        tools:layout="@layout/fragment_problem_list">
        <argument
            android:name="lastSolvedQuizId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_problemListFragment_to_quizFragment"
            app:destination="@id/quizFragment" />
        <action
            android:id="@+id/action_problemListFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_problemListFragment_to_questionCategoryFragment"
            app:destination="@id/questionCategoryFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.contentful_javasilver.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_historyFragment_to_learningLogFragment"
            app:destination="@id/learningLogFragment" />
        <action
            android:id="@+id/action_historyFragment_to_statisticsFragment"
            app:destination="@id/statisticsFragment" />
        <action
            android:id="@+id/action_historyFragment_to_navigation_bookmark"
            app:destination="@id/navigation_bookmark" />
    </fragment>

    <fragment
        android:id="@+id/learningLogFragment"
        android:name="com.example.contentful_javasilver.LearningLogFragment"
        android:label="学習ログ"
        tools:layout="@layout/fragment_learning_log" />

    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.example.contentful_javasilver.StatisticsFragment"
        android:label="学習統計"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.example.contentful_javasilver.BookmarkFragment"
        android:label="@string/title_bookmark"
        tools:layout="@layout/fragment_bookmark" >
        <action
            android:id="@+id/action_bookmarkFragment_to_quizFragment"
            app:destination="@id/quizFragment" />
    </fragment>

    <fragment
        android:id="@+id/privacyPolicyFragment"
        android:name="com.example.contentful_javasilver.PrivacyPolicyFragment"
        android:label="@string/privacy_policy_title"
        tools:layout="@layout/fragment_privacy_policy" />

</navigation>
